MplayerXP NEWS -- history of user-visible changes.

Version 0.8

* project migrated from CVS on SVN
* Redesigned internal architecture of the player (now it being building statically with all internal libs)
* new configure script
* modified some drivers and added new ones.
* fixed some lacks and bugs (now player can play H.264 on non-accelerated X11 surface)
* started replacement of all inline asm code with intrinsic technology.

Version 0.7.2

* Fixed configuring and compilation under some platforms
* Added additional parallelism into some parts of the project

Version 0.7.1

* many 64-bit related fixes
* new and updated ffmpeg's codecs
* fixed some bugs

Version 0.7.0

* Fixed widescreen scaling
* New and updated ffmpeg's codecs
* imported new code from mphq:
  - random playback
  - scaletempo audio filter
  - overcomplete wavelet denoiser
  - 2xsai scaler
  - framestep filter
  - crop filter
  - closed caption subtitre support
  - libmenu
* reworked xvid wrapper. Now it supports xvidcore-1.1.3+
* reworked divx-6 wrapper. Now it supports divx-6.1.1+
* ffmpeg's codecs now have lowest priority during auto codecs choosing.
* fixed bug #1806169: compile error (project is not ready for X86_64 architecture)
* added support for IPv6 protocol and better network configuration
* libmpeg was upgraded upto 0.4.1
* older gcc (like gcc-2.95.3) are not longer supported. MplayerXP
  requires now gcc-3.2.3 version of gcc or higher.
* fixed gcc4 compilation

Version 0.6.3

* Allow multiple extra include and extra library directories

Version 0.6.2

* synchronized libloader with mplayerhq
* updated ffmpeg codecs (fixes some lacks of prev release)
* added support for new codecs
* fixed segfault in MPC demuxer

Version 0.6.1.1

* win32 config file reading related changes

Version 0.6.1

* restored swscaler functionality
* restored QT codecs functionality
* added support for new codecs
* fixed gcc-4 compilation
* improved cygwin port and portability
* added SOFT-quit functionality